docs/api/0.2.1/README.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](assets/irondocs.svg)

**Version 0\.2\.1**

# Ironwood Standard Library

**API reference** · 134 documented types · 10 packages

Browse packages below, then open a type for its declaration, examples, and member reference.

## Packages

| Package | Types |
| --- | ---: |
| [`ironwood.ds`](ironwood/ds/package-summary.md) | 26 |
| [`ironwood.io`](ironwood/io/package-summary.md) | 31 |
| [`ironwood.lang`](ironwood/lang/package-summary.md) | 38 |
| [`ironwood.nio`](ironwood/nio/package-summary.md) | 5 |
| [`ironwood.nio.file`](ironwood/nio/file/package-summary.md) | 16 |
| [`ironwood.nio.file.attribute`](ironwood/nio/file/attribute/package-summary.md) | 2 |
| [`ironwood.pool`](ironwood/pool/package-summary.md) | 4 |
| [`ironwood.time`](ironwood/time/package-summary.md) | 2 |
| [`ironwood.time.format`](ironwood/time/format/package-summary.md) | 1 |
| [`ironwood.util`](ironwood/util/package-summary.md) | 9 |

## Types

| Type | Package | Description |
| --- | --- | --- |
| [`ArrayLinkedList`](ironwood/ds/ArrayLinkedList.md) | `ironwood.ds` |  |
| [`ArrayList`](ironwood/ds/ArrayList.md) | `ironwood.ds` |  |
| [`ByteBufferMap`](ironwood/ds/ByteBufferMap.md) | `ironwood.ds` |  |
| [`ByteMap`](ironwood/ds/ByteMap.md) | `ironwood.ds` |  |
| [`CharMap`](ironwood/ds/CharMap.md) | `ironwood.ds` |  |
| [`CharSequenceMap`](ironwood/ds/CharSequenceMap.md) | `ironwood.ds` |  |
| [`Collections`](ironwood/ds/Collections.md) | `ironwood.ds` | Utility methods for Ironwood data structures. |
| [`IdentityMap`](ironwood/ds/IdentityMap.md) | `ironwood.ds` |  |
| [`IdentitySet`](ironwood/ds/IdentitySet.md) | `ironwood.ds` |  |
| [`IntArrayList`](ironwood/ds/IntArrayList.md) | `ironwood.ds` |  |
| [`IntHolder`](ironwood/ds/IntHolder.md) | `ironwood.ds` |  |
| [`IntLinkedList`](ironwood/ds/IntLinkedList.md) | `ironwood.ds` |  |
| [`IntMap`](ironwood/ds/IntMap.md) | `ironwood.ds` |  |
| [`IntSet`](ironwood/ds/IntSet.md) | `ironwood.ds` |  |
| [`LinkedList`](ironwood/ds/LinkedList.md) | `ironwood.ds` |  |
| [`LinkedMap`](ironwood/ds/LinkedMap.md) | `ironwood.ds` |  |
| [`LinkedSet`](ironwood/ds/LinkedSet.md) | `ironwood.ds` |  |
| [`LongArrayList`](ironwood/ds/LongArrayList.md) | `ironwood.ds` |  |
| [`LongHolder`](ironwood/ds/LongHolder.md) | `ironwood.ds` |  |
| [`LongLinkedList`](ironwood/ds/LongLinkedList.md) | `ironwood.ds` |  |
| [`LongMap`](ironwood/ds/LongMap.md) | `ironwood.ds` |  |
| [`LongSet`](ironwood/ds/LongSet.md) | `ironwood.ds` |  |
| [`Map`](ironwood/ds/Map.md) | `ironwood.ds` |  |
| [`MathUtils`](ironwood/ds/MathUtils.md) | `ironwood.ds` |  |
| [`Set`](ironwood/ds/Set.md) | `ironwood.ds` |  |
| [`UnmodifiableList`](ironwood/ds/UnmodifiableList.md) | `ironwood.ds` | A read-only view of an [`ArrayList`](ironwood/ds/ArrayList.md). |
| [`BufferedInputStream`](ironwood/io/BufferedInputStream.md) | `ironwood.io` |  |
| [`BufferedOutputStream`](ironwood/io/BufferedOutputStream.md) | `ironwood.io` |  |
| [`BufferedReader`](ironwood/io/BufferedReader.md) | `ironwood.io` |  |
| [`BufferedWriter`](ironwood/io/BufferedWriter.md) | `ironwood.io` |  |
| [`ByteArrayInputStream`](ironwood/io/ByteArrayInputStream.md) | `ironwood.io` |  |
| [`ByteArrayOutputStream`](ironwood/io/ByteArrayOutputStream.md) | `ironwood.io` |  |
| [`Closeable`](ironwood/io/Closeable.md) | `ironwood.io` |  |
| [`DataInputStream`](ironwood/io/DataInputStream.md) | `ironwood.io` |  |
| [`DataOutputStream`](ironwood/io/DataOutputStream.md) | `ironwood.io` |  |
| [`EOFException`](ironwood/io/EOFException.md) | `ironwood.io` |  |
| [`FileInputStream`](ironwood/io/FileInputStream.md) | `ironwood.io` |  |
| [`FileNotFoundException`](ironwood/io/FileNotFoundException.md) | `ironwood.io` |  |
| [`FileOutputStream`](ironwood/io/FileOutputStream.md) | `ironwood.io` |  |
| [`FileReader`](ironwood/io/FileReader.md) | `ironwood.io` |  |
| [`FileWriter`](ironwood/io/FileWriter.md) | `ironwood.io` |  |
| [`Flushable`](ironwood/io/Flushable.md) | `ironwood.io` |  |
| [`IOException`](ironwood/io/IOException.md) | `ironwood.io` |  |
| [`InputStream`](ironwood/io/InputStream.md) | `ironwood.io` |  |
| [`InputStreamReader`](ironwood/io/InputStreamReader.md) | `ironwood.io` |  |
| [`OutputStream`](ironwood/io/OutputStream.md) | `ironwood.io` |  |
| [`OutputStreamWriter`](ironwood/io/OutputStreamWriter.md) | `ironwood.io` |  |
| [`PrintStream`](ironwood/io/PrintStream.md) | `ironwood.io` |  |
| [`PrintWriter`](ironwood/io/PrintWriter.md) | `ironwood.io` |  |
| [`RandomAccessFile`](ironwood/io/RandomAccessFile.md) | `ironwood.io` |  |
| [`Reader`](ironwood/io/Reader.md) | `ironwood.io` |  |
| [`StandardInputStream`](ironwood/io/StandardInputStream.md) | `ironwood.io` |  |
| [`StringReader`](ironwood/io/StringReader.md) | `ironwood.io` |  |
| [`StringWriter`](ironwood/io/StringWriter.md) | `ironwood.io` |  |
| [`UTFDataFormatException`](ironwood/io/UTFDataFormatException.md) | `ironwood.io` |  |
| [`UncheckedIOException`](ironwood/io/UncheckedIOException.md) | `ironwood.io` |  |
| [`Writer`](ironwood/io/Writer.md) | `ironwood.io` |  |
| [`ArithmeticException`](ironwood/lang/ArithmeticException.md) | `ironwood.lang` |  |
| [`ArrayIndexOutOfBoundsException`](ironwood/lang/ArrayIndexOutOfBoundsException.md) | `ironwood.lang` |  |
| [`AutoCloseable`](ironwood/lang/AutoCloseable.md) | `ironwood.lang` |  |
| [`Boolean`](ironwood/lang/Boolean.md) | `ironwood.lang` |  |
| [`Byte`](ironwood/lang/Byte.md) | `ironwood.lang` |  |
| [`CharSequence`](ironwood/lang/CharSequence.md) | `ironwood.lang` |  |
| [`Character`](ironwood/lang/Character.md) | `ironwood.lang` |  |
| [`ClassCastException`](ironwood/lang/ClassCastException.md) | `ironwood.lang` |  |
| [`Comparable`](ironwood/lang/Comparable.md) | `ironwood.lang` |  |
| [`Double`](ironwood/lang/Double.md) | `ironwood.lang` |  |
| [`Enum`](ironwood/lang/Enum.md) | `ironwood.lang` | Common Java-shaped base type for compiler-created enum values. |
| [`Error`](ironwood/lang/Error.md) | `ironwood.lang` |  |
| [`Exception`](ironwood/lang/Exception.md) | `ironwood.lang` |  |
| [`Float`](ironwood/lang/Float.md) | `ironwood.lang` |  |
| [`IllegalArgumentException`](ironwood/lang/IllegalArgumentException.md) | `ironwood.lang` |  |
| [`IllegalStateException`](ironwood/lang/IllegalStateException.md) | `ironwood.lang` |  |
| [`IndexOutOfBoundsException`](ironwood/lang/IndexOutOfBoundsException.md) | `ironwood.lang` |  |
| [`Integer`](ironwood/lang/Integer.md) | `ironwood.lang` |  |
| [`Iterable`](ironwood/lang/Iterable.md) | `ironwood.lang` |  |
| [`Long`](ironwood/lang/Long.md) | `ironwood.lang` |  |
| [`Math`](ironwood/lang/Math.md) | `ironwood.lang` |  |
| [`NegativeArraySizeException`](ironwood/lang/NegativeArraySizeException.md) | `ironwood.lang` |  |
| [`NullPointerException`](ironwood/lang/NullPointerException.md) | `ironwood.lang` |  |
| [`Number`](ironwood/lang/Number.md) | `ironwood.lang` |  |
| [`NumberFormatException`](ironwood/lang/NumberFormatException.md) | `ironwood.lang` |  |
| [`Object`](ironwood/lang/Object.md) | `ironwood.lang` |  |
| [`OutOfMemoryError`](ironwood/lang/OutOfMemoryError.md) | `ironwood.lang` |  |
| [`Runnable`](ironwood/lang/Runnable.md) | `ironwood.lang` |  |
| [`RuntimeException`](ironwood/lang/RuntimeException.md) | `ironwood.lang` |  |
| [`Short`](ironwood/lang/Short.md) | `ironwood.lang` |  |
| [`StackTraceElement`](ironwood/lang/StackTraceElement.md) | `ironwood.lang` | Immutable source frame used by Throwable.getStackTrace(). |
| [`String`](ironwood/lang/String.md) | `ironwood.lang` |  |
| [`StringBuffer`](ironwood/lang/StringBuffer.md) | `ironwood.lang` | Mutable character storage with the Java StringBuffer surface. |
| [`StringBuilder`](ironwood/lang/StringBuilder.md) | `ironwood.lang` |  |
| [`StringIndexOutOfBoundsException`](ironwood/lang/StringIndexOutOfBoundsException.md) | `ironwood.lang` |  |
| [`System`](ironwood/lang/System.md) | `ironwood.lang` |  |
| [`Throwable`](ironwood/lang/Throwable.md) | `ironwood.lang` |  |
| [`UnsupportedOperationException`](ironwood/lang/UnsupportedOperationException.md) | `ironwood.lang` |  |
| [`BufferOverflowException`](ironwood/nio/BufferOverflowException.md) | `ironwood.nio` |  |
| [`BufferUnderflowException`](ironwood/nio/BufferUnderflowException.md) | `ironwood.nio` |  |
| [`ByteBuffer`](ironwood/nio/ByteBuffer.md) | `ironwood.nio` |  |
| [`ByteOrder`](ironwood/nio/ByteOrder.md) | `ironwood.nio` |  |
| [`InvalidMarkException`](ironwood/nio/InvalidMarkException.md) | `ironwood.nio` |  |
| [`AccessDeniedException`](ironwood/nio/file/AccessDeniedException.md) | `ironwood.nio.file` |  |
| [`ClosedDirectoryStreamException`](ironwood/nio/file/ClosedDirectoryStreamException.md) | `ironwood.nio.file` |  |
| [`DirectoryIteratorException`](ironwood/nio/file/DirectoryIteratorException.md) | `ironwood.nio.file` |  |
| [`DirectoryNotEmptyException`](ironwood/nio/file/DirectoryNotEmptyException.md) | `ironwood.nio.file` |  |
| [`DirectoryStream`](ironwood/nio/file/DirectoryStream.md) | `ironwood.nio.file` |  |
| [`FileAlreadyExistsException`](ironwood/nio/file/FileAlreadyExistsException.md) | `ironwood.nio.file` |  |
| [`FileSystemException`](ironwood/nio/file/FileSystemException.md) | `ironwood.nio.file` |  |
| [`FileSystemLoopException`](ironwood/nio/file/FileSystemLoopException.md) | `ironwood.nio.file` |  |
| [`FileVisitResult`](ironwood/nio/file/FileVisitResult.md) | `ironwood.nio.file` |  |
| [`FileVisitor`](ironwood/nio/file/FileVisitor.md) | `ironwood.nio.file` |  |
| [`Files`](ironwood/nio/file/Files.md) | `ironwood.nio.file` |  |
| [`InvalidPathException`](ironwood/nio/file/InvalidPathException.md) | `ironwood.nio.file` |  |
| [`NoSuchFileException`](ironwood/nio/file/NoSuchFileException.md) | `ironwood.nio.file` |  |
| [`Path`](ironwood/nio/file/Path.md) | `ironwood.nio.file` |  |
| [`Paths`](ironwood/nio/file/Paths.md) | `ironwood.nio.file` |  |
| [`SimpleFileVisitor`](ironwood/nio/file/SimpleFileVisitor.md) | `ironwood.nio.file` |  |
| [`BasicFileAttributes`](ironwood/nio/file/attribute/BasicFileAttributes.md) | `ironwood.nio.file.attribute` |  |
| [`FileTime`](ironwood/nio/file/attribute/FileTime.md) | `ironwood.nio.file.attribute` |  |
| [`ArrayObjectPool`](ironwood/pool/ArrayObjectPool.md) | `ironwood.pool` | Reuses objects in a resizable array with configurable preloading and growth. |
| [`MultiArrayObjectPool`](ironwood/pool/MultiArrayObjectPool.md) | `ironwood.pool` | Reuses objects across linked array segments without copying existing slots. |
| [`ObjectBuilder`](ironwood/pool/ObjectBuilder.md) | `ironwood.pool` | Creates independent objects for an owning pool. |
| [`ObjectPool`](ironwood/pool/ObjectPool.md) | `ironwood.pool` | Owns reusable objects and lends them to callers through [`get()`](ironwood/pool/ObjectPool.md#member-get-28--29-). |
| [`DateTimeException`](ironwood/time/DateTimeException.md) | `ironwood.time` |  |
| [`Instant`](ironwood/time/Instant.md) | `ironwood.time` | An immutable epoch-second and nanosecond timestamp with ISO-8601 text. |
| [`DateTimeParseException`](ironwood/time/format/DateTimeParseException.md) | `ironwood.time.format` |  |
| [`Arrays`](ironwood/util/Arrays.md) | `ironwood.util` | Allocation-conscious operations on Ironwood arrays. |
| [`BitSet`](ironwood/util/BitSet.md) | `ironwood.util` | A growable set of nonnegative integer bit indexes. |
| [`Comparator`](ironwood/util/Comparator.md) | `ironwood.util` | Orders two values without requiring lambda or method-reference support. |
| [`Iterator`](ironwood/util/Iterator.md) | `ironwood.util` |  |
| [`NoSuchElementException`](ironwood/util/NoSuchElementException.md) | `ironwood.util` |  |
| [`Objects`](ironwood/util/Objects.md) | `ironwood.util` | Null-safe operations on ordinary Ironwood references. |
| [`Optional`](ironwood/util/Optional.md) | `ironwood.util` | A present non-null reference or an empty result. |
| [`Random`](ironwood/util/Random.md) | `ironwood.util` | Deterministic 48-bit linear-congruential pseudorandom generator. |
| [`StringJoiner`](ironwood/util/StringJoiner.md) | `ironwood.util` | Builds delimiter-separated text in explicitly owned character storage. |

---

Generated from Ironwood source comments with **IronDocs**.
